src/main/java/com/example/comma/global/error/exception/InternalServerException.java
package com.example.comma.global.error.exception;


import com.example.comma.global.error.ErrorCode;

public class InternalServerException extends BusinessException {
    public InternalServerException(ErrorCode errorCode) {
        super(errorCode);
    }
}